third_party/move/move-compiler-v2/tests/visibility-checker/package_visibility_script.exp

Diagnostics:
error: public(package) function `0x42::test::foo` cannot be called from a script because it is not public
  ┌─ tests/visibility-checker/package_visibility_script.move:2:25
  │
2 │     public(package) fun foo() {}
  │                         ^^^ callee
  ·
7 │         0x42::test::foo();
  │         ----------------- called here
